--- a/polokwane_surf.client/src/App.css
+++ b/polokwane_surf.client/src/App.css
@@ -148,7 +148,7 @@ html, body  {
 
 .carousel-img {
     width: 100%;
-    height: 90vh;
+    height: 80vh;
     object-fit: cover; /* Or use `contain` if you prefer full image display */
 }
 
@@ -156,7 +156,7 @@ html, body  {
 .wave-container {
     position: relative;
     width: 100%;
-    margin-top: -5px;
+    margin-top: -28px;
 }
 
     .wave-container svg {
@@ -190,9 +190,8 @@ html, body  {
 
 
 /* about  */
-
 .about.section {
-    padding: 60px 0;
+    padding: 20px 0 60px 0; /* less space on top */
 }
 
 .section-heading {
@@ -315,8 +314,8 @@ html, body  {
     margin-bottom: 1.5rem;
 }
 
-    .portfolio-heading h2 {
-        font-size: 1.8rem;
+    .portfolio-heading h3 {
+        font-size: 1.1rem;
         font-weight: bold;
         color: #222;
     }
